# Hunyuan_service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Project_Note.md  check_dependencies.py  check_model.py  main.py  pyproject.toml
AI-Vision-Service-main/: .gitignore  Dockerfile  pyproject.toml
AI-Vision-Service-main/docs/flux/: torch_compile.md
AI-Vision-Service-main/docs/qwen2_5_vl/: README.md  attention_d2h.md  torch_compile.md
AI-Vision-Service-main/src/: main.py  model_registry.py
AI-Vision-Service-main/src/api/: batch_task.py  single_task.py
AI-Vision-Service-main/src/models/: base.py  flux_1.py  qwen2_5_vl.py
AI-Vision-Service-main/tests/: test_request.py
docs/: DOCKER_DEPLOYMENT.md
docs/qwen2_5/: torch-compile.md
src/: main.py  model_registry.py  utils.py
src/api/: batch_task.py  single_task.py
src/models/: base.py  hunyuan.py  qwen2_5.py
tests/: check_hunyuan_files.sh  check_tokenizer.sh  find_hunyuan_path.sh  test_api.py  test_compile_performance.py  test_qwen_simple.py  test_sdpa_影响.py  test_warmup_效果.py
