[project]
name = "llm1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dataclasses>=0.8",
    "fastapi>=0.118.2",
    "pydantic>=2.12.0",
    "ruff>=0.14.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "uvicorn>=0.37.0",
    "transformers>=4.40.0",
    "qwen-vl-utils>=0.0.8",
    "accelerate>=0.27.0",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # E: 错误, F: pyflakes, I: import 排序
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
